# dcf77_magic

./: .gitignore  CMakeLists.txt  README.md  adc_console.c  bandpass.m  conv_out_100s.eps  conv_out_200s.eps  conv_out_5s.eps  dcf77_fft.eps  dcf77_fft_zoomed_in.eps  leap_second_test.c  main.c  offset_removal.m  plot_dcf77.m  wrapped_conv_buf_10s.eps  wrapped_conv_buf_20s.eps  wrapped_conv_buf_2s.eps  wrapped_conv_buf_5s.eps
docs/: conv_out_10s.eps  conv_out_20s.eps  conv_out_2s.eps  conv_out_50s.eps  dcf77.eps  dcf77_fft_30_min_zoomed_in.eps  dcf77_phase_locked.eps  dcf77_with_amplifier.eps  white_noise_biquad_filtered.eps  wrapped_conv_buf_100s.eps  wrapped_conv_buf_50s.eps
